# g3

./: .gitignore  .gitlab-ci.yml  .runner_system_id  README.md  index.html  setup_mcp_servers.py
Documentation/: MONGODB_IMPLEMENTATION.md  TESTING.md  schema.json
backend/: .gitignore  Dockerfile  MCP_Usage.md  README.md  api.py  database.py  jwt_utils.py  main.py  pyproject.toml  setup_mcp_servers.py  uniprot_mcp_wrapper.py
backend/mcp/: __init__.py  hooks.py  pdb_alpha_mcp.py  servers.py
backend/streaming/: __init__.py  models.py
backend/tests/: conftest.py  test_api.py  test_chat.py  test_mcp_servers.py
builds/i9wQuh4hA/0/provencat/dawbio/project/25/g3.tmp/git-template/: config
frontend/: .gitignore  README.md  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: main.tsx
frontend/src/app/: App.tsx
frontend/src/app/components/: AdminPanel.tsx  BubbleAnimation.tsx  ChatMessage.tsx  ForgotPassword.tsx  Header.tsx  History.tsx  PrivacyPolicy.tsx  Projects.tsx  QueryCard.tsx  Register.tsx  Sidebar.tsx  SignIn.tsx  TermsOfService.tsx
frontend/src/app/components/ui/: chart.tsx
frontend/src/app/context/: AuthContext.tsx
frontend/src/test/: components.test.tsx  setup.ts  sidebar.test.tsx
frontend/src/utils/: api.ts
src/app/: App.tsx
src/app/components/: Register.tsx  Sidebar.tsx  SignIn.tsx
