[project]
name = "console-chat"
version = "0.1.0"
description = "Console chat powered by GitHub Copilot SDK for bio-research"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "github-copilot-sdk>=0.1.32",
    "uniprot-mcp>=0.1.0",
    "fastapi>=0.115.0",      
    "uvicorn>=0.30.0",       
]

[project.scripts]
chat = "main:run"